mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v14__test__v14_to_v15_migration_wireguard_port_any_selected_obfuscation_auto.snap
---
source: mullvad-daemon/src/migrations/v14.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "obfuscation_settings": {
    "selected_obfuscation": "auto"
  },
  "relay_settings": {
    "normal": {
      "wireguard_constraints": {
        "port": "any"
      }
    }
  }
}
